--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
   <title>Strom Bloom - Your Personal Weather Companion</title>
   <link rel="icon" href="../assets/img/logo.png" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body class="min-h-screen bg-gradient-to-br from-blue-50 to-blue-100">
-  <img src="../assets/img/logo.png" class="absolute h-15 left-10 top-6  opacity-{100}  ">
+  <img src="../assets/img/logo.png" class="absolute h-12 left-10 top-6  opacity-{100}  ">
   <div class="container mx-auto px-4 py-12 flex flex-col md:flex-row items-center justify-center min-h-screen">
     <!-- Weather Image Section -->
     <div class="w-full md:w-1/2 p-4 flex justify-center">
