--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="../assets/img/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="./css/login.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body class="bg-gray-100 min-h-screen">
